# authoritah

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  cSpell.json
ca/: Cargo.toml  Dockerfile  README.md  rest-api.yml
ca/migrations/2019-07-11-161017_create_ca/: down.sql  up.sql
ca/src/: api.rs  cli.yml  config.rs  error.rs  lib.rs  main.rs
ca/src/db/: mod.rs  model.rs  schema.rs
ca/tests/: ca.rs  error.rs
client/: Cargo.toml  README.md
client/src/: cli.yml  config.rs  error.rs  logging.rs  main.rs
client/src/commands/: ca_cert.rs  ca_info.rs  mod.rs
core/: Cargo.toml
lib/: Cargo.toml  README.md
lib/src/: ca.rs  error.rs  lib.rs
