[package]
name = "authoritah-ca"
version = "0.1.0"
authors = ["Sean Bruton <sean@unnecessary.engineering>"]
edition = "2018"

[dependencies]
chrono = "0.4.9"

[dependencies.cryptonomicon]
path = "../../cryptonomicon/core"
features = ["asymmetric", "elliptic", "pkcs10", "x500", "x509"]

[dependencies.diesel]
version = "1.4.2"
features = ["sqlite"]
